# DDFastCaloSim

./: .codespellrc  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  requirements.txt  setup.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
cmake/: executable.cmake  lint.cmake  spell.cmake  tests.cmake
converter/: CMakeLists.txt
converter/executables/: createParamInput.cxx
converter/include/FastCaloSimConverter/: ExtrapolationConverter.h  HitConverter.h  InputLoader.h
converter/source/: ExtrapolationConverter.cxx  HitConverter.cxx
geometry/: OpenDataDetector.xml
include/DDFastCaloSim/: FastCaloSim.h  FastCaloSimModel.h  FastCaloSimWriter.h  ParamOutputEDM.h  ParametrizationModel.h  ParametrizationWriter.h  TrackMsg.h
source/: FastCaloSim.cxx  FastCaloSimModel.cxx  FastCaloSimWriter.cxx  ParametrizationModel.cxx  ParametrizationWriter.cxx
steering/: OpenDataDetector.py
tests/: CMakeLists.txt  run_ODD_sim.sh
tests/TestConfig/: ParamConverterTestsConfig.h  ParamTestsConfig.h  TransportTestsConfig.h
tests/TestHelpers/: Container.h  IOManager.h  JsonComparer.h  LogComparer.h  TrackContainer.h
tests/configs/OpenDataDetector/: parametrization.py  simulation.py  transport.py
tests/data/: simplified_geo.gdml
tests/data/geo/: OpenDataDetectorIdentifiers.xml  OpenDataECal.xml  OpenDataMaterials.xml  OpenDataVisualization.xml
tests/geometry/OpenDataDetector/: OpenDataBeamPipe.xml  OpenDataMaterialBinning.xml
tests/include/: ParamTests.h  TransportTests.h
tests/output/: ODD_sim.root
tests/python/ParticleEventGenerator/: __init__.py  main.py
tests/python/scripts/: ODD_regions.py  composition_config.json  plot_transport.py
tests/refs/: ODD_sim.root
tests/refs/ODDParametrizationTests_ODDParametrization/: event.hepmc  out.root  param_input.root  param_output.root
tests/refs/ODDTransportTests_ODDTransport/: out.root  transport_tracks.json
tests/refs/ParamConverterTests_ParamConverterTest/: FCS_ParametrizationInput.root
tests/refs/ParamTests_Parametrization/: dd4hep_out.root  param_output.root
tests/refs/TransportTests_Transport/: dd4hep_out.root  event.hepmc  param_output.root  transport_tracks.json
tests/source/: LoadLibTests.cxx  ODDParametrizationTests.cxx  ODDTransportTests.cxx  ParamConverterTests.cxx  ParamTests.cxx  TransportTests.cxx
tests/steering/: main.py
tests/steering/cfg/: fast_sim.py  fastsim.py  gun.py  output.py  physics.py  random.py  simulation.py  truth.py
